# sandbox

./: AGENTS.md  README.md  everywhere.bash  foo.md  go.mod  go.sum  sb.go  zsheverywhere.zsh
aifun/: ai-allowlist.py
aoc2023/: starter_test.go
atmotube/: decode.go  decode_test.go  go.mod  go.sum
cdcfun/: Makefile  README.md  active.go
chordfun/: index.html
colimafun/: Dockerfile  bashrc  run-alpine.sh  run-debian.sh
command/: command.go  deploy_example_test.go
dynamodb/: main.go
env/: bashrc
esp8266fun/: .gitignore  platformio.ini
fly-debian/: Dockerfile  fly.toml
fly-veloren-server/: Dockerfile  Makefile  docker-compose.yml  fly.toml  setup.sh  start.sh
gastownfun/: Containerfile  README.md  ensure-container.sh  enter.sh
geminize/: geminize.go  geminize_test.go
go-from-ios/: Makefile  README.md
iax/: README.md  iax.go  main.go
lfg/: fun.go
llm/: deps.txt  describe-hn.sh  phi2.py
macos/: README.md  keychain-create  keychain-get
mast-rs/: Cargo.toml  lib.rs
mastodon-pleroma-fun/: Dockerfile  README.md  fly.toml  install-pleroma.sh
mem0fun/: .dockerignore  .gitignore  Dockerfile  README.md  demo.py  docker-compose.yml  requirements.txt  run-demo.sh
nixfun/: README.md
notea/: README.md
openbrainfun/: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  go.mod  go.sum
parse/: parse.go
passkeys-webauthn-demo/: Dockerfile  README.md  fly.toml  go.mod  go.sum  index.html  register-response-sample.json  server.go  user.go
pigrep/: main.go  main_test.go
progfun/: parse_markdown_test.go
rc4/: __init__.py  lib.go  rc4.pl  (+4 more)
s3db-rs/: 1MOlCL_1nv7fJlQpPVyQnxU  Cargo.toml  Makefile  build.rs  go.mod  go.sum
s3db-rs/go_from_rust/: Makefile  libgob2json.go
s3db-rs/go_from_rust/gob2json/: gob2json.go  gob2json_test.go
s3db-rs/src/: lib.rs  main.rs  node_crypt.rs  varint.rs
s3db-rs/tests/: 1MOlCL_1nv7fJlQpPVyQnxU  YKPRjxKOEttHaAN97ccSrsIT6-CFNj9znrP-4x8-dhE  q-QDbW3Hr_4sIQU8FtE3D2mlGRbS9VPpnTjlIFvN61g  test.rs
(+380 files in other folders)
