[package]
name = "s3db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
serde_json = "1.0.71"
serde = { version = "1.0.130", features = ["derive"] }
rusty-s3 = "0.2.0"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "json", "rustls-tls"] }
error-chain = "0.12.4"

sodiumoxide = "0.2.7"
base64 = "0.13.0"

structopt = "0.3.13"
clap-verbosity-flag = "0.3.2"     
xsalsa20poly1305 = { version = "0.8.0" , features = ["std"] }



