[package]
name = "s3db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.11.1"
clap = { version = "4.5", features = ["derive"] }
crypto_secretbox = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusty-s3 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rust-argon2 = "0.8.3"
blake2 = "0.9.2"
#lru = "0.7.0"
duration-str = "0.3.7"
chrono = "0.4.19"
